Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0 Beta3
-
-
c24cc3014d750a406523629eff94f4f5f87e92cb (qt/qtwebengine/5.14.0)
Description
Attempt to 'save page' through page context menu hits the assert
ASSERT: "download" in file /home/user/qt/5.14/qtwebengine/src/core/profile_adapter.cpp, line 721
with a stack trace:
* thread #1, name = 'simplebrowser', stop reason = signal SIGABRT frame #5: 0x00007fffe100ca4c libQt5WebEngineCore.so.5`QtWebEngineCore::ProfileAdapter::updateDownloadPath(this=<unavailable>, downloadId=<unavailable>, directory=<unavailable>, fileName=<unavailable>) at profile_adapter.cpp:721:42 frame #6: 0x00007ffff7f8639f libQt5WebEngineWidgets.so.5`QWebEngineDownloadItem::setDownloadDirectory(this=<unavailable>, directory=<unavailable>) at qwebenginedownloaditem.cpp:602:67 * frame #7: 0x00005555556bf9fe simplebrowser`DownloadManagerWidget::downloadRequested(this=<unavailable>, download=0x00006030001b4bd0) at downloadmanagerwidget.cpp:76:15 frame #8: 0x00007fffcfe2ebf4 libQt5Core.so.5`void doActivate<false>(QObject*, int, void**) [inlined] QtPrivate::QSlotObjectBase::call(this=<unavailable>, r=<unavailable>, a=<unavailable>) at qobjectdefs_impl.h:394:51 frame #9: 0x00007fffcfe2ebcc libQt5Core.so.5`void doActivate<false>(sender=0x0000603000030370, signal_index=<unavailable>, argv=0x00007fffffff9920) at qobject.cpp:3880 frame #10: 0x00007ffff7fbe6af libQt5WebEngineWidgets.so.5`QWebEngineProfile::downloadRequested(this=<unavailable>, _t1=<unavailable>) at moc_qwebengineprofile.cpp:158:5 frame #11: 0x00007ffff7faad04 libQt5WebEngineWidgets.so.5`QWebEngineProfilePrivate::downloadRequested(this=<unavailable>, info=<unavailable>) at qwebengineprofile.cpp:246:15 frame #12: 0x00007fffe0fa5c9a libQt5WebEngineCore.so.5`QtWebEngineCore::DownloadManagerDelegateQt::ChooseSavePath(this=<unavailable>, web_contents=<unavailable>, suggested_path=<unavailable>, default_extension=<unavailable>, can_save_as_complete=<unavailable>, callback=<unavailable>)> const&)> const&) at download_manager_delegate_qt.cpp:305:17 frame #13: 0x00007fffe787ec87 libQt5WebEngineCore.so.5`::ContinueGetSaveInfo() at save_package.cc:1341:37 frame #14: 0x00007fffe303811b libQt5WebEngineCore.so.5`::Run() at callback.h:98:12 frame #15: 0x00007fffe703255f libQt5WebEngineCore.so.5`::ReplyAdapter<base::FilePath, const base::FilePath &>() at post_task_and_reply_with_result_internal.h:30:23 frame #16: 0x00007fffe7033059 libQt5WebEngineCore.so.5`::Invoke<void (*)(base::OnceCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *), base::RepeatingCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *>() at bind_internal.h:399:12 frame #17: 0x00007fffe7032eaf libQt5WebEngineCore.so.5`::RunImpl<void (*)(base::OnceCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *), std::tuple<base::RepeatingCallback<void (const base::FilePath &)>, base::internal::OwnedWrapper<std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > > >, 0, 1>() [inlined] MakeItSo<void (*)(base::OnceCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *), base::RepeatingCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *> at bind_internal.h:599:12 frame #18: 0x00007fffe7032ea7 libQt5WebEngineCore.so.5`::RunImpl<void (*)(base::OnceCallback<void (const base::FilePath &)>, std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > *), std::tuple<base::RepeatingCallback<void (const base::FilePath &)>, base::internal::OwnedWrapper<std::unique_ptr<base::FilePath, std::default_delete<base::FilePath> > > >, 0, 1>() at bind_internal.h:673 frame #19: 0x00007fffe99af04e libQt5WebEngineCore.so.5`::RunReply() [inlined] Run at callback.h:98:12 frame #20: 0x00007fffe99aefa1 libQt5WebEngineCore.so.5`::RunReply() at post_task_and_reply_impl.cc:114 frame #21: 0x00007fffe99af295 libQt5WebEngineCore.so.5`::RunOnce() [inlined] Invoke<void (*)(base::(anonymous namespace)::PostTaskAndReplyRelay), base::(anonymous namespace)::PostTaskAndReplyRelay> at bind_internal.h:399:12 frame #22: 0x00007fffe99af1e3 libQt5WebEngineCore.so.5`::RunOnce() [inlined] MakeItSo<void (*)(base::(anonymous namespace)::PostTaskAndReplyRelay), base::(anonymous namespace)::PostTaskAndReplyRelay> at bind_internal.h:599 frame #23: 0x00007fffe99af1e3 libQt5WebEngineCore.so.5`::RunOnce() [inlined] RunImpl<void (*)(base::(anonymous namespace)::PostTaskAndReplyRelay), std::tuple<base::(anonymous namespace)::PostTaskAndReplyRelay>, 0> at bind_internal.h:673 frame #24: 0x00007fffe99af1e3 libQt5WebEngineCore.so.5`::RunOnce() at bind_internal.h:641 frame #25: 0x00007fffe98b3080 libQt5WebEngineCore.so.5`::RunTask() [inlined] Run at callback.h:98:12 frame #26: 0x00007fffe98b2f6a libQt5WebEngineCore.so.5`::RunTask() at task_annotator.cc:142 frame #27: 0x00007fffe991de6a libQt5WebEngineCore.so.5`::DoWorkImpl() at thread_controller_with_message_pump_impl.cc:365:23 frame #28: 0x00007fffe991f5ca libQt5WebEngineCore.so.5`::DoDelayedWork() at thread_controller_with_message_pump_impl.cc:291:7 frame #29: 0x00007fffe0f34aaa libQt5WebEngineCore.so.5`QtWebEngineCore::MessagePumpForUIQt::handleScheduledWork(this=0x000060700000e480) at browser_main_parts_qt.cpp:207:47 frame #30: 0x00007fffcfe173fa libQt5Core.so.5`QObject::event(this=<unavailable>, e=0x00006030001aea20) at qobject.cpp:0 frame #31: 0x00007fffd22c7185 libQt5Widgets.so.5`QApplicationPrivate::notify_helper(this=<unavailable>, receiver=0x000060700000e490, e=<unavailable>) at qapplication.cpp:3693:26 frame #32: 0x00007fffd22ca681 libQt5Widgets.so.5`QApplication::notify(this=0x00007fffffffe190, receiver=<unavailable>, e=<unavailable>) at qapplication.cpp:0:9 frame #33: 0x00007fffcfdc70e5 libQt5Core.so.5`QCoreApplication::notifyInternal2(receiver=<unavailable>, event=<unavailable>) at qcoreapplication.cpp:1092:18 frame #34: 0x00007fffcfdc9da3 libQt5Core.so.5`QCoreApplicationPrivate::sendPostedEvents(receiver=0x0000000000000000, event_type=0, data=<unavailable>) at qcoreapplication.cpp:1832:9
Attachments
Issue Links
- resulted from
-
QTBUG-80249 Test WebEngine examples for 5.14.0 (Linux)
-
- Closed
-