Fix 'setDownloadDirectory' for download item on 'SavePage' action

Chromium's DownloadManager doesn't create its download items before
path for saving page is confirmed. So assert inside updateDownloadPath
was not correct. Moreover, the name is confusing because it's not really
updating anything. Remove it and use ProfileAdapterClient::DownloadInfo
timestamp to determine updated filename after directory change.

Ammends recent new api for changing download directory 0884fab3b1.

Fixes: QTBUG-80372
Change-Id: If9efb52979deb3cf21fc4e12989173c85e04e090
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>